--- a/AdvancedChat/src/main/resources/color-gui.yml
+++ b/AdvancedChat/src/main/resources/color-gui.yml
@@ -11,18 +11,22 @@ Items:
     Name: '&a&lNext Menu'
     Texture: '[next]'
     Slot: 5
+    Item: green_stained_glass_pane
   Last:
     Name: '&e&lLast Menu'
     Texture: '[last]'
     Slot: 3
+    Item: yellow_stained_glass_pane
   Exit:
     Name: '&c&lExit'
     Texture: '[exit]'
     Slot: 0
+    Item: red_stained_glass_pane
   Rainbow:
     Name: '&a&lR&e&la&b&li&d&ln&6&lb&3&lo&7&lw'  
     Texture: '[rainbow]'
     Slot: 40
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&0H&6&be&al&dl&3o &7p&8la&9y&ce&1r&e]'
       - '&b&nClick to select this chat color'
@@ -30,6 +34,7 @@ Items:
     Name: '&0&lBlack'    
     Texture: '[black]'
     Slot: 41
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&0Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -37,6 +42,7 @@ Items:
     Name: '&9&lBlue'  
     Texture: '[blue]'
     Slot: 22
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&9Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -44,6 +50,7 @@ Items:
     Name: '&8&lDark Gray'   
     Texture: '[dark_gray]'
     Slot: 34
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&8Hello player&e]'
       - '&b&nClick to select this chat color'      
@@ -51,6 +58,7 @@ Items:
     Name: '&7&lGray'
     Texture: '[gray]'
     Slot: 33
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&7Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -58,6 +66,7 @@ Items:
     Name: '&6&lGold'    
     Texture: '[gold]'
     Slot: 28
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&6Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -65,6 +74,7 @@ Items:
     Name: '&5&lDark Purple' 
     Texture: '[dark_purple]'
     Slot: 32
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&5Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -72,6 +82,7 @@ Items:
     Name: '&4&lDark Red'    
     Texture: '[dark_red]'
     Slot: 19
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&4Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -79,6 +90,7 @@ Items:
     Name: '&3&lDark Aqua'    
     Texture: '[dark_aqua]'
     Slot: 29
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&3Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -86,6 +98,7 @@ Items:
     Name: '&2&lDark Blue'   
     Texture: '[dark_blue]'
     Slot: 21
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&2Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -93,6 +106,7 @@ Items:
     Name: '&1&lDark Green'    
     Texture: '[dark_green]'
     Slot: 23
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&1Hello player&e]'
       - '&b&nClick to select this chat color'
@@ -100,6 +114,7 @@ Items:
     Name: '&a&lGreen'    
     Texture: '[green]'
     Slot: 24
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&aHello player&e]'
       - '&b&nClick to select this chat color'
@@ -107,6 +122,7 @@ Items:
     Name: '&b&lAqua'    
     Texture: '[aqua]'
     Slot: 30
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&bHello player&e]'
       - '&b&nClick to select this chat color'
@@ -114,6 +130,7 @@ Items:
     Name: '&c&lRed'   
     Texture: '[red]'
     Slot: 20
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&cHello player&e]'
       - '&b&nClick to select this chat color'
@@ -121,6 +138,7 @@ Items:
     Name: '&d&lLight Purple'    
     Texture: '[light_purple]'
     Slot: 31
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&dHello player&e]'
       - '&b&nClick to select this chat color'
@@ -128,6 +146,7 @@ Items:
     Name: '&e&lYellow'
     Texture: '[yellow]'
     Slot: 25
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &a[&eHello player&a]'
       - '&b&nClick to select this chat color'
@@ -135,6 +154,7 @@ Items:
     Name: '&f&lWhite'
     Texture: '[white]'
     Slot: 39
+    Item: paper
     Lore:
       - '&7Your chat would look like this: &e[&fHello player&e]'
       - '&b&nClick to select this chat color'
