--- a/AdvancedChat/src/main/resources/player-gui.yml
+++ b/AdvancedChat/src/main/resources/player-gui.yml
@@ -4,52 +4,49 @@
 #  / ___ / /___    Version 1.7.0
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #  
-#
 Title: '&b&lMenu &8&l> &e&lPlayer'
 Especial-Items:
   Mute:
-    Name: '&bPlayer is [state_mute]'
-    Slot: 24 
+    Name: '&bPlayer is &6[<is_mute>&6]'
+    Slot: 23
 Items:
   Next:
     Name: '&a&lNext Menu'
-    Item: stone
+    Item: green_stained_glass_pane
     Texture: '[next]'
-    Is-Skull: true
     Slot: 5
-#  Last:
-#    Name: '&e&lLast Menu'
-#    Item: stone
-#    Texture: '[last]'
-#    Is-Skull: true
-#    Slot: 3
   Exit:
     Name: '&c&lExit'
-    Item: stone
+    Item: red_stained_glass_pane
     Texture: '[exit]'
-    Is-Skull: true
     Slot: 0
   Colors:
     Name: '&bColors'
-    Item: stone
-    Is-Skull: true
-    Texture: '[colors]'
-    Slot: 20
+    Item: paper
+    Texture: '[choosecolor]'
+    Slot: 19
   Channel:
-    Name: '&bChannel'
-    Item: stone
-    Is-Skull: true
+    Name: '&bChannel &e[Working Progress]'
+    Item: paper
     Texture: '[channels]'
-    Slot: 22
+    Slot: 21
   Gradient:
     Name: '&bGradient'
-    Item: stone
-    Is-Skull: true
+    Item: paper
     Texture: '[gradient]'
     Slot: 38
+  Rainbow:
+    Name: '&bRainbow'
+    Item: paper
+    Texture: '[rainbowcube]'
+    Slot: 25
   SpecialCodes:
     Name: '&bSpecial Codes'
-    Item: stone
-    Is-Skull: true
+    Item: paper
     Texture: '[special_codes]'
-    Slot: 38 
+    Slot: 40
+  Settings:
+    Name: '&bSettings'
+    Item: redstone_comparator
+    Texture: '[settings]'
+    Slot: 42
