--- a/AdvancedChat/src/main/resources/gradient-gui.yml
+++ b/AdvancedChat/src/main/resources/gradient-gui.yml
@@ -4,7 +4,6 @@
 #  / ___ / /___    Version 1.7.0
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #  
-#
 Title: '&b&lMenu &8&l> &e&lGradient'
 Items:
   Last:
@@ -23,125 +22,157 @@ Items:
     Slot: 41
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&0Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&0Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Blue:
     Name: '&9&lBlue'
     Texture: '[blue]'
     Slot: 22
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&9Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&9Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Dark-Gray:
     Name: '&8&lDark Gray'
     Texture: '[dark_gray]'
     Slot: 34
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&8Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&8Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Gray:
     Name: '&7&lGray'
     Texture: '[gray]'
     Slot: 33
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&7Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&7Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Gold:
     Name: '&6&lGold'
     Texture: '[gold]'
     Slot: 28
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&6Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&6Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Dark-Purple:
     Name: '&5&lDark Purple'
     Texture: '[dark_purple]'
     Slot: 32
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&5Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&5Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Dark-Red:
     Name: '&4&lDark Red'
     Texture: '[dark_red]'
     Slot: 19
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&4Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&4Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Dark-Aqua:
     Name: '&3&lDark Aqua'
     Texture: '[dark_aqua]'
     Slot: 29
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&3Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&3Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Dark-Blue:
     Name: '&1&lDark Blue'
     Texture: '[dark_blue]'
     Slot: 21
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&1Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&1Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Dark-Green:
     Name: '&2&lDark Green'
     Texture: '[dark_green]'
     Slot: 23
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&2Hello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&2Hello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Green:
     Name: '&a&lGreen'
     Texture: '[green]'
     Slot: 24
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&aHello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&aHello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Aqua:
     Name: '&b&lAqua'
     Texture: '[aqua]'
     Slot: 30
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&bHello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&bHello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Red:
     Name: '&c&lRed'
     Texture: '[red]'
     Slot: 20
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&cHello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&cHello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Light-Purple:
     Name: '&d&lLight Purple'
     Texture: '[light_purple]'
     Slot: 31
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&dHello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&dHello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   Yellow:
     Name: '&e&lYellow'
     Texture: '[yellow]'
     Slot: 25
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &a[&eHello player&a]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &a[&eHello player&a]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
   White:
     Name: '&f&lWhite'
     Texture: '[white]'
     Slot: 39
     Item: paper
     Lore:
-    - '&7Your chat would look like this: &e[&fHello player&e]'
-    - '&b&nClick to select this chat color'
+      - '&7Your chat would look like this: &e[&fHello player&e]'
+      - ' '
+      - '&b&nRight click to select the first color'
+      - '&e&nLeft click to select the second color'
