--- a/AdvancedChat/src/main/resources/groups.yml
+++ b/AdvancedChat/src/main/resources/groups.yml
@@ -5,7 +5,7 @@
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #  
 #
-# ● Here you can add new groups and configure them, but for this to work you need Vault or LuckPerms
+# ● Here you can add new groups and configure them, but for this to work you need LuckPerms
 # ● The group name has to be the same as the range name or the group customization will not work
 # ● For more information you can visit the AdvancedChat Wiki
 # 
