--- a/AdvancedChat/src/main/resources/messages.yml
+++ b/AdvancedChat/src/main/resources/messages.yml
@@ -11,26 +11,28 @@
 # ● Version: 1.7
 #
 AdvancedChat:
+  Alert-Update: '&aThere is a new version available for download click to copy the link'
+  Alert-Update-Hover: '&6Click on this message to copy the link'
   Depend-Plugin: '&cCannot enable packet features!, Required plugin missing:'
   Error-MySql: '&cCould not find the data, check the config &e[&bPath = Database&e]'
   ClearChat-Server: '&7The chat has been cleaned'
   ClearChat-Player: '&7The chat has been cleaned by &b[&e<name>&b]'
   ClearChat-Staff: '&c{Staff} &7The chat has been cleaned by &b[&e<name>&b]'
   No-Permission: '&cYou dont have permission to do that!'
-  No-Permission-Label: '&7Ask the server &b[&cowner&7 or an &eadministrator&b]&7 for help for more information'
+  No-Permission-Hover: '&7Ask the server &b[&cowner &7or an &eadministrator&b] &7for help for more information'
   Error-Args: '&cUnknown Arguments'
   Error-Console: '&cThis command is only available to players'
   Reload: '&aReload Completed'
-  Help-Mute: '&7Use &b/Mute &e<player> &7'
-  Help-UnMute: '&7Use &b/UnMute &e<player> &7'
-  Help-Use-Cmd: '&7Use &b/AdvanceChat &8| &9/Ac &6Help &7 show more information of plugin'
+  Help-Mute: '&7Use &b/Mute &e<player> &7to mute a player'
+  Help-UnMute: '&7Use &b/UnMute &e<player> &7to unmute a player.'
+  Help-Use-Cmd: '&7Use &b/AdvanceChat &8| &9/Ac &6Help &7show more information of plugin'
   Help-Msg:
     - '&5> &b/AdvancedChat &8| &9/Ac &7these are the variants of the main plugin command'
     - '&5> &b/AdvancedChat &6help &7show this same message'
     - '&5> &b/AdvancedChat &6reload &7reload the plugin files'
     - '&5> &b/AdvancedChat &6info &7shows information about the plugin'
     - '&5> &b/AdvancedChat &6color &e<player name> &9set &a<color name> &7open color gui'
-    - '&5> &b/AdvancedChat &6player &e<player name>&7 open the player settings'
+    - '&5> &b/AdvancedChat &6player &e<player name> &7open the player settings'
     - '&5> &b/AdvancedChat &6gradient &e<player name> &9set &a<color|value> &d<first|second> &7open the gradient gui'
     - '&5> &b/Mgs &e<player name> &7send of private message '
     - '&5> &b/AdvancedChat &6settings &e<option> &9<true|false|value> &7open the settings gui'
@@ -51,7 +53,13 @@ AdvancedChat:
   Alert-Disable-Chat: '&cyou must activate the chat to be able to send messages'
   Alert-Disable-Mention: '&cthis player has mentions disabled'
   Alert-Disable-Msg: '&cThis player cannot receive private messages'
-  
+  Logger:
+    Info: '{default}-> '
+    Error: '{default}-> '
+    Success: '{default}-> '
+    Warning: '{default}-> '
+    Debug: '{default}-> '
+    Chat: '{default}-> &e[&aCHAT&e]&7'
 #
 # This is the end of the file ... [-_-] more things to come
 # 
