--- a/AdvancedChat/src/main/resources/plugin.yml
+++ b/AdvancedChat/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 main: jss.advancedchat.AdvancedChat
 name: AdvancedChat
-version: 1.7.0-b20
-author: [jonagamerpro1234]
+version: ${version}
+author: jonagamerpro1234
 api-version: 1.13
 description: AdvancedChat is an easy to use plugin that will help you customize the chat on your server to make it look its best. It will also have a customization system by groups and among other functions more...  
 prefix: AdvancedChat
